# researchops-ai

./: .env.example  pyproject.toml  test_arxiv.py  test_embedding.py  test_ingestion.py  test_qdrant.py  test_settings.py
app/: main.py
app/core/: config.py
app/ingestion/: ingest_papers.py
app/models/: paper.py
app/services/: arxiv_service.py  embedding_service.py  qdrant_service.py  rag_service.py  search_service.py
